# DNDC-legacy

./: README.md
CurrentDNDC/DNDC95/: CreateInputFile.h  CreateInputFiles.cpp  DNDCgo.aps  DNDCgo.cpp  DNDCgo.h  DNDCgo.plg  DNDCgo.sln  DNDCgo.vcxproj  Dndc_CH4peat.cpp  Dndc_ManureFeedlot.cpp  Dndc_ManureTreatment.cpp  Dndc_SoilChemistry.cpp  Dndc_VOCs.cpp  Dndc_WT.cpp  Dndc_balloon.cpp  Dndc_crop0.cpp  Dndc_data.cpp  Dndc_farming.cpp  Dndc_hydrology.cpp  Dndc_manure0.cpp  Dndc_manure1.cpp  Dndc_manure9.cpp  Dndc_output.cpp  Dndc_shell.h  Dndc_tool.cpp  ReadMe.txt  Source_main.h  StdAfx.h
CurrentDNDC/DNDC95/Debug/: CL.read.1.tlog  CL.write.1.tlog  DNDC95.exp  DNDC95.lib  DNDC95.rar  DNDC95.txt  DNDCgate.ilk  DNDCgo.exp  DNDCgo.ilk  DNDCgo.lastbuildstate  DNDCgo.lib  DNDCgo.res  ManureDNDC2.rar  TestRcmd.cpp  cl.command.1.tlog  vc100.idb  vc60.idb
CurrentDNDC/DNDC95/Release/: DNDCgo.exp  DNDCgo.lib
CurrentDNDC/DndcGraphics/: DNDC71.PLG  DNDC74.DSW  Dndc71.rgs  Dndc_ManningLand.h  Dndc_SoilProfile.h  Dndc_manure11.h  ExtractData.cpp  GlobeData.cpp  GlobeMapping.cpp  Help_AutoFert.h  ManureCompost.cpp  ManureCycle.cpp  ManureCycle.h  ManureField.cpp  ManurePen.h  MapHelper.cpp  MonteCarloParameters.h  MonteCarloRegionSelect.cpp  RegionInput.cpp  RegionSelectCrops.h  RegionYear.h  RunoffCN.cpp  SaveSoilYear.cpp  SelectRegionDlg.h  SitePage10.h  SitePage11.h  SitePage3.h  SitePage5.h  SitePage6.cpp  SitePage7.cpp  SitePage7.h  SitePage8.cpp  SitePage8.h  StdAfx.cpp  StdAfx.h  WizardCrops.cpp  WizardResult.h  WizardUncertainty.h  dndc71.rc  dndc71.vcxproj  (+8 more)
CurrentDNDC/DndcGraphics/Debug/: Bedding.sbr  DNDC89.map  DNDC91.map  DNDC93.map  DNDC95.map  DNDC_Map1.sbr  DNDC_SoilProfile.sbr  Dndc_ManningChannel.sbr  (+62 more)
DNDC/: CMakeLists.txt
DNDC/DNDC95/: CMakeLists.txt  CreateInputFile.h  CreateInputFiles.cpp  DNDC_Interface.cpp  DNDC_Interface.h  DNDCgo.clw  DNDCgo.cpp  DNDCgo.h  DNDCgo.mak  DNDCgo.opt  DNDCgo.rc  Dndc_CH4.cpp  Dndc_ManureTreatment.cpp  Dndc_P.cpp  Dndc_RegionOutput.cpp  Dndc_SoilPhysics.cpp  Dndc_VOCs.cpp  Dndc_WT.cpp  Dndc_balance.cpp  Dndc_balloon.cpp  Dndc_data.cpp  Dndc_farming.cpp  Dndc_hydrology.cpp  Dndc_main.cpp  Dndc_manure10.cpp  Dndc_manure5.cpp  Dndc_manure9.cpp  Dndc_mapping.cpp  Dndc_output.cpp  Dndc_paint.cpp  Dndc_regiondaily.cpp  Dndc_shell.cpp  Dndc_shell.h  Dndc_summary.cpp  Dndc_tool.cpp  Dndc_tool.h  Resource.h  RunPaths.h  SitePara.cpp  Source_main.h  (+6 more)
DNDC/DNDCgo_batch/: CMakeLists.txt  CreateInputFiles.cpp  Dndc_RegionOutput.cpp  Dndc_main.cpp  Dndc_manure6.cpp  Dndc_regiondaily.cpp  Source_main.h
DNDC/DNDCgo_site/: CMakeLists.txt  DNDCgo.h  Dndc_Eh.cpp  Dndc_SoilChemistry.cpp  Dndc_balance.cpp  Dndc_farming.cpp  Dndc_manure10.cpp  Dndc_manure2.cpp  Dndc_manure7.cpp  Dndc_paint.cpp  Dndc_shell.cpp  Dndc_summary.cpp
DNDC/DndcGraphics/: DNDC71.PLG  DNDC74.DSW  DNDC_Map1.cpp  DNDCgoing.cpp  DNDCgoing.h  Dndc71.rgs  Dndc_ManningChannel.cpp  Dndc_ManningLand.h  Dndc_SoilProfile.cpp  Dndc_SoilProfile.h  Dndc_YieldPredict.h  Dndc_manure12.cpp  DrawDrought.cpp  DrawDrought.h  ExtractData.cpp  FarmCompost.cpp  FarmCompost.h  FarmLagoon.h  GlobeData.cpp  GlobeMap.cpp  GlobeResult.cpp  Help_AutoFert.cpp  Help_AutoFert.h  Link.h  ListFile.cpp  ListFile.h  MainFrm.cpp  MainFrm.h  MakeHelp.bat  ManureApplication.cpp  ManureCompost.cpp  ManureCompost.h  ManureCycle.cpp  ManureCycle.h  ManureField.cpp  ManureField.h  ManureHousing.cpp  ManureLagoon.h  ManurePen.h  ManureSilo.cpp  (+69 more)
DNDC95/DNDC95/: CMakeLists.txt  CreateInputFiles.cpp  DNDCgo.cpp  Dndc_CH4peat.cpp  Dndc_Eh.cpp  Dndc_ManureComponent.cpp  Dndc_ManureFeedlot.cpp  Dndc_RegionOutput.cpp  Dndc_SoilChemistry.cpp  Dndc_VOCs.cpp  Dndc_WT.cpp  Dndc_balance.cpp  Dndc_crop0.cpp  Dndc_data.cpp  Dndc_hydrology.cpp  Dndc_main.cpp  Dndc_manure0.cpp  Dndc_manure1.cpp  Dndc_manure2.cpp  Dndc_manure3.cpp  Dndc_manure4.cpp  Dndc_manure5.cpp  Dndc_manure6.cpp  Dndc_manure7.cpp  Dndc_mapping.cpp  Dndc_output.cpp  Dndc_shell.cpp  Source_main.h  StdAfx.cpp  Swine.cpp
DNDC95/DNDC95/ManureDNDC/: Swine_input_test_2.dnd  indoor_climate.txt
DNDC95/DndcGraphics/: BatchRun.cpp  BatchRun.h  Batch_list.txt  CreateInputFile.cpp  CreateInputFile.h  DNDC71.CLW  DNDC71.CPP  DNDC71.H  DNDC_Map1.cpp  DNDC_Map1.h  DNDCgoing.h  Dndc71.idl  Dndc_ManningChannel.h  Dndc_ManningLand.cpp  Dndc_YieldPredict.cpp  Dndc_manure11.cpp  Dndc_manure11.h  Dndc_manure12.h  ExtractData.h  FarmLagoon.cpp  FarmLagoon.h  GasFlux.cpp  GlobeData.h  GlobeDataExtract.cpp  GlobeDataExtract.h  GlobeMap.h  GlobeMapping.cpp  GlobeMapping.h  GlobeResult.h  MainFrm.h  ManureApplication.h  ManureDigester.cpp  ManureDigester.h  ManureGrazing.cpp  ManureGrazing.h  ManureHousing.h  ManureLagoon.cpp  ManurePen.cpp  ManureSilo.h  Manure_storage.cpp  (+72 more)
src/DNDC95/: DNDCgo.dsp  DNDCgo.dsw  DNDCgo.vcxproj  DNDCgo.vcxproj.filters  Dndc_CH4.cpp  Dndc_P.cpp  Dndc_SoilPhysics.cpp  Dndc_main.cpp  Dndc_manure4.cpp  Dndc_shell.cpp
src/DndcGraphics/: BatchRun.h  DNDCgoing.cpp  Dndc_ManningChannel.cpp  Dndc_ManningLand.cpp  Dndc_YieldPredict.h  Dndc_manure12.h  DrawDrought.cpp  DrawDrought.h  FarmCompost.cpp  FarmLagoon.cpp  GasFlux.cpp  GlobeMapping.h  ListFile.h  ManureApplication.cpp  ManureSilo.cpp  ManureStorage.h  Manure_storage.cpp  MapLayer.cpp  NewCrop.cpp  RegionMap.h  SCSDlg.cpp  SaveSoilYear.h  SelectShapeMap.h  SitePSheet.cpp  SitePSheet.h  SitePage1.h  SitePage4.cpp  SitePage9.cpp  WizardResult.cpp  data_set.cpp  dndc71.aps  dndc_ManureFarmCrops.cpp  dndc_main.h  dndc_map.cpp  dndc_save.h  gd.h  gdcache.h  ountySave.h  resource.fd  vssver.scc
(+866 files in other folders)
